# practices

practice_1/: CMakeLists.txt  example.txt  main.cpp
practice_1/lib/: clear.h
practice_1/lib/checking/: inputCheck.h  inputCheck2.h
practice_1/lib/pointer/: appendText.h  createFile.h  downloadData.h  firstFile.h  replaceSubstr.h
practice_1/lib/stream/: appStream.h  appendTextStream.h  changePlaces.h  downloadData.h  replaceSubstrStream.h
practice_2/: CMakeLists.txt  main.cpp
practice_2/helpers/: createFile.h  deleteFile.h
practice_3/: class_string.cpp  class_string.h  main.cpp
practice_4/: CMakeLists.txt  main.cpp  set.h
practice_5/: CMakeLists.txt  TBody.h  main.cpp
practice_6/: AssociativeArray.h  CMakeLists.txt  main.cpp
practice_7_8/: practice_7.sln
practice_7_8/Project1/: MyForm.cpp  MyForm.h  Project1.vcxproj  Project1.vcxproj.filters  app.h
practice_7_8/Project1/x64/Debug/: Project1.exe.recipe  Project1.vcxproj.FileListAbsolute.txt  Project1.vcxproj.GenerateResource.cache
practice_7_8/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  ResGen.command.1.tlog  ResGen.read.1.tlog  ResGen.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
