cmake_minimum_required(VERSION 3.23)
project(practice_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(practice_1 main.cpp lib/stream/appStream.h lib/clear.h lib/stream/changePlaces.h lib/pointer/firstFile.h lib/pointer/replaceSubstr.h lib/pointer/createFile.h lib/checking/inputCheck.h lib/pointer/downloadData.h lib/pointer/appendText.h lib/stream/replaceSubstrStream.h lib/stream/createFile.h lib/stream/downloadData.h lib/stream/appendTextStream.h lib/checking/inputCheck2.h)
